# ouroboros-ops

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  VIDEO_SOLUTIONS.md  convert_video_to_gif.py  demo.py  main.py  pyproject.toml  requirements.txt  setup_env.bat
.github/: copilot-instructions.md
cli/: __init__.py  benchmark.py  simulate.py
docs/: DOCUMENTATION_SUMMARY.md  TECHNICAL_DOCS.md  demo_video.md
docs/screenshots/: .gitkeep
engine/: __init__.py  event_bus.py  game_loop.py  profiler.py
snake_core/: __init__.py  ai.py  food.py  grid.py  pathfinding.py  snake.py  spatial.py
tests/: __init__.py  test_grid.py
ui_pygame/: __init__.py  renderer.py
